--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,7 @@ runs:
           -e GITHUB_REPOSITORY="${{ github.repository }}" \
           -e GITHUB_PR_NUMBER="${{ github.event.number }}" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
-          -e GITHUB_SHA="${{ github.event.pull_request.head.sha }}" \
+          -e GITHUB_SHA="${{ github.sha }}" \
           -e TFENV_TERRAFORM_VERSION="${{ inputs.terraform_version }}" \
           $ENV_VARS \
           ghcr.io/brunordias/terraform-runner:latest
