--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,10 @@ inputs:
     description: 'Directory containing Terraform variables files.'
     required: false
 
+  tf_override_dir:
+    description: 'Directory containing Terraform override files.'
+    required: false
+
 runs:
   using: 'composite'
   steps:
@@ -65,6 +69,18 @@ runs:
           for file in "${{ inputs.tf_variables_dir }}"/*.tfvars "${{ inputs.tf_variables_dir }}"/*.tfvars.json; do
             [ -e "$file" ] || continue
             docker cp "$file" terraform-runner:/terraform/
+          done
+        fi
+
+    - name: Copy Terraform override directory to container if set
+      shell: bash
+      run: |
+        if [[ -n "${{ inputs.tf_override_dir }}" && -d "${{ inputs.tf_override_dir }}" ]]; then
+          for pattern in "*_override.tf" "*.override.tf.json" "override.tf" "override.tf.json"; do
+            for file in "${{ inputs.tf_override_dir }}"/$pattern; do
+              [ -e "$file" ] || continue
+              docker cp "$file" terraform-runner:/terraform/
+            done
           done
         fi
 
